base/homeassistant-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homeassistant-vs
  namespace: argocd
spec:
  hosts:
    - home.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        - destination:
            host: istiod-home-assistant.home-automation.svc.cluster.local
            port:
              number: 8080
