base/vault-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  hosts:
    - vault.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
